[package]
name = "hk_modlinks"
version = "0.1.0"
description = "Rust data model and tools for hk-modding/hk-modlinks"
edition = "2021"
authors = ["Clazex <clazex.y@gmail.com>"]
license = "MIT"
publish = false
homepage = "https://github.com/Clazex/hk_modlinks#readme"
repository = "https://github.com/Clazex/hk_modlinks/"

[dependencies]
derive_builder = "0.12.0"
hex = { version = "0.4.3", features = ["serde"] }
quick-xml = { version = "~0.26.0", features = ["serialize"], optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.92", optional = true }

[features]
default = ["json", "xml"]
json = ["dep:serde_json"]
xml = ["dep:quick-xml"]
