[workspace]
members = ["hk_modlinks", "hkml"]

[workspace.package]
description = "Rust data model and tools for hk-modding/hk-modlinks"
edition = "2021"
authors = ["Clazex <clazex.y@gmail.com>"]
license = "MIT"
publish = false
homepage = "https://github.com/Clazex/hk_modlinks#readme"
repository = "https://github.com/Clazex/hk_modlinks/"

[workspace.dependencies]
hk_modlinks = { path = "./hk_modlinks" }

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1
