[package]
name = "hk_modlinks"
version = "0.1.0"
description = "Rust data model and tools for hk-modding/hk-modlinks"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
derive_builder = "0.12.0"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }

quick-xml = { version = "0.28.2", features = ["serialize", "escape-html"], optional = true }

ron = { version = "0.8.0", optional = true }
serde_json = { version = "1.0.96", optional = true }
serde_yaml = { version = "0.9.21", optional = true }
toml = { version = "0.7.4", optional = true }

handlebars = { version = "4.3.7", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["safe-name", "xml"]
safe-name = []
xml = ["dep:quick-xml"]
xml-encoding = ["xml", "quick-xml?/encoding"]
convert = []
toml = ["convert", "dep:toml"]
json = ["convert", "dep:serde_json"]
yaml = ["convert", "dep:serde_yaml"]
ron = ["convert", "dep:ron"]
all-formats = ["xml", "toml", "json", "yaml", "ron"]
changelog = ["dep:serde_json"]
changelog-template = ["changelog", "dep:handlebars", "dep:lazy_static"]
