[package]
name = "hk_modlinks"
version = "0.1.0"
description = "Rust data model and tools for hk-modding/hk-modlinks"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
derive_builder = "0.12.0"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_with = "3.4.0"
thiserror = "1.0.51"
url = { version = "2.5.0", features = ["serde"] }

clap = { version = "4.4.11", optional = true }

quick-xml = { version = "0.31.0", features = ["serialize", "escape-html"], optional = true }
const_format = "0.2.32"

ron = { version = "0.8.1", optional = true }
serde_json = { version = "1.0.108", optional = true }
serde_yaml = { version = "0.9.29", optional = true }
toml = { version = "0.8.8", optional = true }

handlebars = { version = "4.5.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["safe-name", "xml"]
safe-name = []
clap-enum = ["dep:clap"]
xml = ["dep:quick-xml"]
xml-encoding = ["quick-xml?/encoding"]
convert = []
toml = ["convert", "dep:toml"]
json = ["convert", "dep:serde_json"]
yaml = ["convert", "dep:serde_yaml"]
ron = ["convert", "dep:ron"]
all-formats = ["xml", "toml", "json", "yaml", "ron"]
changelog = ["dep:serde_json"]
changelog-template = ["changelog", "dep:handlebars", "dep:lazy_static"]
