[package]
name = "hk_modlinks"
version = "0.1.0"
description = "Rust data model and tools for hk-modding/hk-modlinks"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
derive_builder = "0.20.0"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_with = { version = "3.8.1", features = ["hex"] }
thiserror = "1.0.61"
url = { version = "2.5.0", features = ["serde"] }

const_format = "0.2.32"
quick-xml = { version = "0.31.0", features = [
	"serialize",
	"escape-html",
], optional = true }

clap = { version = "4.5.4", optional = true }

ron = { version = "0.8.1", optional = true }
serde_json = { version = "1.0.117", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
toml = { version = "0.8.13", optional = true }

handlebars = { version = "5.1.2", optional = true }
lazy_static = { version = "1.4.0", optional = true }

[features]
default = ["xml"]

xml = ["dep:quick-xml"]
xml-encoding = ["quick-xml?/encoding"]

clap = ["dep:clap"]

convert = []
toml = ["convert", "dep:toml"]
json = ["convert", "dep:serde_json"]
yaml = ["convert", "dep:serde_yaml"]
ron = ["convert", "dep:ron"]
all-formats = ["xml", "toml", "json", "yaml", "ron"]

changelog = ["dep:serde_json"]
changelog-template = ["changelog", "dep:handlebars", "dep:lazy_static"]
