[package]
name = "hkml"
version = "0.1.0"
description = "Commandline tool for manipulating data from hk-modding/hk-modlinks"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
hk_modlinks = { workspace = true, features = ["clap", "changelog", "changelog-template"] }

clap = { version = "4.4.12", features = ["derive"] }
fs_extra = "1.3.0"
itertools = "0.12.0"
lazy_static = "1.4.0"
serde = "1.0.194"
sha2 = "0.10.8"
toml = "0.8.8"

actix-web = { version = "4.4.1", default-features = false }
hex = "0.4.3"
indicatif = "0.17.7"
infer = "0.15.0"
reqwest = { version = "0.11.23", features = ["rustls-tls-webpki-roots", "blocking"] }
url = "2.5.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[features]
default = ["xml", "json"]

xml = ["hk_modlinks/xml"]
json = ["hk_modlinks/json"]
toml = ["hk_modlinks/toml"]
yaml = ["hk_modlinks/yaml"]
ron = ["hk_modlinks/ron"]
