[package]
name = "hkml"
version = "0.1.0"
description = "Commandline tool for manipulating data from hk-modding/hk-modlinks"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
hk_modlinks = { workspace = true, features = [
	"clap",
	"changelog",
	"changelog-template",
] }

clap = { version = "4.5.4", features = ["derive"] }
fs_extra = "1.3.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
serde = "1.0.202"
sha2 = "0.10.8"
toml = "0.8.13"

actix-web = { version = "4.6.0", default-features = false }
hex = "0.4.3"
indicatif = "0.17.8"
infer = "0.15.0"
ureq = { version = "2.9.7", features = [
	"brotli",
	"http-interop",
	"proxy-from-env",
] }
url = "2.5.0"
zip = { version = "1.3.1", default-features = false, features = [
	"bzip2",
	"deflate",
	"deflate64",
	"deflate-zopfli",
	"lzma",
	"zstd",
] }

[features]
default = ["xml", "json"]

xml = ["hk_modlinks/xml"]
json = ["hk_modlinks/json"]
toml = ["hk_modlinks/toml"]
yaml = ["hk_modlinks/yaml"]
ron = ["hk_modlinks/ron"]
